openshift/operators/prometheus-operator/instance/overlays/example/prometheus-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: prometheus-app
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prometheus-app
    weight: 100
  wildcardPolicy: None
